started adding lemma

--- a/sections/mef.tex
+++ b/sections/mef.tex
@@ -1,4 +1,8 @@
 \section{Maximal Equicontinuous Factor}
+\begin{lemma}
+  Let $(X,d)$ be a compact metric space and $(A_j)_{j \in J}$ a family of closed sets in $X$.
+  Then there exists a c
+\end{lemma}
 \begin{theorem}[Maximal equicontinuous factor]
   Let $(X,T)$ be a TDS.
   Then $(X,T)$ has a unique (up to equivalence) equicontinuous factor $\pi : (X,T) \to (A,T)$ that is maximal in the following sense:
