--- a/sections/m-equicontinuity.tex
+++ b/sections/m-equicontinuity.tex
@@ -45,7 +45,7 @@
 \begin{definition}[$m$-Regionally Proximal Realtion]
 	Let $(X, T)$ be a TDS and $m \geq 2$.
 	A tupel $(x_1, \dots, x_m) \in X^m$ is called $m$-regionally proximal if for each $\varepsilon > 0$
-	there are $(x_1', \dots, x_m') \in B_\varepsilon((x_1, \dots, x_m))$ and $t \in T$ such that $d(tx_i, tx_j) < \varepsilon$ for all $i, j \in \{1, \dots, m\}$.
+	there are $(x_1', \dots, x_m') \in B_\varepsilon((x_1, \dots, x_m))$ and $t \in T$ such that $d(tx_i', tx_j') < \varepsilon$ for all $i, j \in \{1, \dots, m\}$.
 	We denote the set of $m$-regionally proximal tupels by $Q_m$.
 \end{definition}
 
