--- a/sections/rpr.tex
+++ b/sections/rpr.tex
@@ -87,7 +87,7 @@ The next construction is a counterexample.
 \end{example}
 
 \begin{theorem}
-  Let $(X, T)$ be an equicontinuous TDS.
+  Let $(X, T)$ be a equicontinuous TDS.
   Then $Q_2(X) = \Delta(X)$.
 \end{theorem}
 
@@ -100,7 +100,11 @@ The next construction is a counterexample.
 \end{proof}
 
 \begin{theorem}
-  Let $(X, T)$ be a minimal TDS with an invariant Borel measure
+  Let $(X, T)$ be a minimal TDS with an invariant Borel probability measure
   and $R$ be the ICER associated with the MEF of $X$.
   Then $Q_2(X) = R$.
 \end{theorem}
+
+\begin{proof}
+  See Auslander p.130 Thm. 8.
+\end{proof}
