added theorem about diagonal/Qm

--- a/sections/m-equicontinuity.tex
+++ b/sections/m-equicontinuity.tex
@@ -31,6 +31,13 @@
 	so the notation $Q_m$ is justified.
 \end{remark}
 
+We define $\Delta^m(X) = \{ (x_1, \dots, x_m) \in X^m \ | \ \text{there are} \ i, j \in \{1, \dots, m\} \ \text{such that} \ x_i = x_j \}$ for some $m \in \mathbb{N}$.
+
+\begin{theorem}
+	Let $(X, T)$ be a minimal TDS and $T$ abelian.
+	Then $(X, T)$ is equicontinuous if and only if $Q_m(X) \setminus \Delta^m(X)$ for $2 \leq m \in \mathbb{N}$.
+\end{theorem}
+
 \begin{example}
 	Let $o$ be the dyadic odometer on $X = \{0, 1\}^\mathbb{N}$ defined in the first section. For $p \in \mathbb{N}$ define $a: X \times \mathbb{Z}/p\mathbb{Z} \to X \times \mathbb{Z}/p\mathbb{Z}$ by
 	\begin{align*}
