--- a/sections/rpr.tex
+++ b/sections/rpr.tex
@@ -108,3 +108,31 @@ The next construction is a counterexample.
 \begin{proof}
   See Auslander p.130 Thm. 8.
 \end{proof}
+
+\begin{example}
+	We consider the one dimensional torus as $\mathbb{T} = \mathbb{R}/\mathbb{Z}$. We return to the skew-rotation $\alpha: \mathbb{T}^2 \to \mathbb{T}^2$ defined by $\alpha(x + \mathbb{Z}, y + \mathbb{Z}) = (a + x + \mathbb{Z}, x + y + \mathbb{Z})$ for all $x + \mathbb{Z}, y + \mathbb{Z} \in \mathbb{T}$, with a fixed $a \in \mathbb{R}$. Then
+	\begin{align*}
+		Q_2(\mathbb{T}^2) = \{((x_1 + \mathbb{Z}, y_1 + \mathbb{Z}), (x_2 + \mathbb{Z}, y_2 + \mathbb{Z})) \in \mathbb{T}^2 \times \mathbb{T}^2;\ x_1=x_2\}.
+	\end{align*}
+\end{example}
+\begin{proof}
+	Fix $x + \mathbb{Z}, y_1 + \mathbb{Z}, y_2 + \mathbb{Z} \in \mathbb{T}$ and $\varepsilon > 0$. Without loss of generality assume $y_1, y_2 \in [0, 1)$ and $y_1 \leq y_2$. Then there are $0 \leq b < \frac{\varepsilon}{2}$ and $n \in \mathbb{N}_0$ such that $\frac{n(n+1)}{2}b \leq  y_2 - y_1$ and $y_2 - \frac{n(n-1)}{2}b < \frac{\varepsilon}{2}$. Then $(b + x + \mathbb{Z}, y_1 + \mathbb{Z}) \in \operatorname{B}_\varepsilon(x + \mathbb{Z}, y_1 + \mathbb{Z})$ and $(x + \mathbb{Z}, y_2 + \mathbb{Z}) \in \operatorname{B}_\varepsilon(x + \mathbb{Z}, y_2 + \mathbb{Z})$ and we have
+	\begin{align*}
+		&d(n(b + x + \mathbb{Z}, y_1 + \mathbb{Z}), n(x + \mathbb{Z}, y_2 + \mathbb{Z}))\\
+		= &d((na + b + x + \mathbb{Z}, \frac{n(n+1)}{2}(b+x) + y_1 + \mathbb{Z}), na + x + \mathbb{Z}, \frac{n(n+1)}{2}x + y_2 + \mathbb{Z})\\
+		= &b + y_2 - y_1 - \frac{n(n+1)}{2}b\\
+		< &\frac{\varepsilon}{2} + \frac{\varepsilon}{2}\\
+		= &\varepsilon,
+	\end{align*}
+	so $((x + \mathbb{Z}, y_1 + \mathbb{Z}), (x + \mathbb{Z}, y_2 + \mathbb{Z}) \in Q_2(\mathbb{T}^2)$, which proves the "$\supseteq$-direction.
+	
+	Now fix $(x_1 + \mathbb{Z}, y_1 + \mathbb{Z}), (x_2 + \mathbb{Z}, y_2 + \mathbb{Z}) \in \mathbb{T}^2$ and assume $x_1 \neq x_2$. Without loss of generality we can assume $x_1, x_2 \in [0, 1)$ and $x_1 < x_2$. Choose $0 < \varepsilon < \max\{\frac{x_2-x_1}{3}, \frac{x_1}{3}, \frac{1 - x_2}{3}\}$. Now let $(x_1' + \mathbb{Z}, y_1' + \mathbb{Z}) \in \operatorname{B}_\varepsilon(x_1 + \mathbb{Z}, y_1 + \mathbb{Z})$, $(x_2' + \mathbb{Z}, y_2' + \mathbb{Z}) \in \operatorname{B}_\varepsilon(x_2 + \mathbb{Z}, y_2 + \mathbb{Z})$ and $n \in \mathbb{N}_0$. Again we can assume without loss of generality that $x_1', x_2' \in [0, 1)$. By the choice of $\varepsilon$ we have
+	\begin{align*}
+		&d(\pm n(x_1' + \mathbb{Z}, y_1' + \mathbb{Z}), \pm n(x_2' + \mathbb{Z}, y_2' + \mathbb{Z}))\\
+		= &d((\pm \frac{n(n+1)}{2}a + x_1' + \mathbb{Z}, \pm \frac{n(n+1)}{2} x_1' + y_1' + \mathbb{Z}), (\pm \frac{n(n+1)}{2}a + x_2' + \mathbb{Z}, \pm \frac{n(n+1)}{2} x_2' + y_2' + \mathbb{Z}))\\
+		\geq &d(\pm \frac{n(n+1)}{2} a + x_1' + \mathbb{Z}, \pm \frac{n(n+1)}{2} a + x_2' + \mathbb{Z})\\
+		= &x_2' - x_1'\\
+		> &\varepsilon,
+	\end{align*}
+	so $((x_1 + \mathbb{Z}, y_1 + \mathbb{Z}), (x_2 + \mathbb{Z}, y_2 + \mathbb{Z})) \notin Q_2(\mathbb{T}^2)$, which proves the "$\subseteq$"-direction.
+\end{proof}
