added tex files for presentation

--- a/sections/mef.tex
+++ b/sections/mef.tex
@@ -105,7 +105,7 @@ We denote by $T^*$ the set of all characters.
     t f(x) = \chi (-t) f (x) = (U(-t) f)(x) = f(tx).
   \end{equation*}
   Therefore $f: (X,T) \to (f(X),T)$ is an equicontinuous factor, where the action of $t \in T$ on $f(X)$ is given by multiplication with $\chi(-t)$.
-  By the universal property of the MEF there exists a continuous $\tilde{f}  : X/R  \to \mathbb{C}$ with $\tilde{f} \circ \pi = f$.
+  By the universal property of the MEF there exists a continuous $\tilde{f}  : X_m  \to \mathbb{C}$ with $\tilde{f} \circ \pi = f$.
   Therefore $f(x_1) = \tilde{f} (\pi (x_1) )=  \tilde{f} ( \pi (x_2)) = f (x_2)$.\\
   To \enquote{$\Leftarrow$}:
   Assume $\pi (x_1) \neq \pi (x_2)$.
