improve wording in proposition "subsystem"

--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -15,10 +15,12 @@
 
 \begin{proposition}[Subsystem]
 	Let $(X, T)$ be a TDS and $A \subseteq X$ a closed, $T$-invariant set.
-	Then $(A, T)$ is also a TDS with the inherited $T$-action called the \emph{subsystem} of $(X, T)$ induced by $A$.
+	Then $(A, T)$ is also a TDS with the $T$-action inherited by restriction and is called the \emph{subsystem} of $(X, T)$ induced by $A$.
 \end{proposition}
 \begin{proof}
-	Since $A$ is a closed subset of a compact Hausdorff space it is a compact Hausdorff space. The invariance of $A$ implies that the $T$ action is well defined, continuity is clear. 
+	Since $A$ is a closed subset of a compact metric space it is also a compact metric space.
+	The invariance of $A$ implies that the restricted $T$-action is well defined.
+	The continuity is clearly inherited.
 \end{proof}
 
 \begin{definition}[Product system]
