improve wording in definition "homomorphism"

--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -31,11 +31,12 @@
 \end{definition}
 
 \begin{definition}[Morphism of TDS]
-	Let $(X, T)$ and $(Y,T)$ be topological dynamical systems. A map $\pi : X \to Y$ is called a \emph{homomorphism} from $(X, T) \to (Y, T)$ if $\pi$ is continuous and $\forall x \in X, t \in T$:
+	Let $(X, T)$ and $(Y,T)$ be topological dynamical systems.
+	A map $\pi : X \to Y$ is called a \emph{homomorphism} from $(X, T) \to (Y, T)$ if $\pi$ is continuous and $\forall x \in X, t \in T$:
 	\begin{equation*}
 		t \pi (x) = \pi(tx).
 	\end{equation*}
-	It is an isomorphism if $\pi$ is a homeomorphism.
+	It is called an \emph{isomorphism} if $\pi$ is a homeomorphism.
 \end{definition}
 
 \begin{definition}[Factor of TDS]
