improve wording in definition "factor of tds"

--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -40,8 +40,10 @@
 \end{definition}
 
 \begin{definition}[Factor of TDS]
-	Let $(X, T)$ and $(Y, T)$ be topological dynamical systems and $\pi: X \to Y$ a homomorphism. Then $\pi$ is called a \emph{factor map} if it is surjective.
-	If there exists a factor map $X \to Y$ then $Y$ is called a \emph{factor} of $X$. If $\pi$ is an isomorphism then $(X, T)$ and $(Y, T)$ are \emph{conjugates}.
+	Let $(X, T)$ and $(Y, T)$ be topological dynamical systems and $\pi: X \to Y$ a homomorphism.
+	Then $\pi$ is called a \emph{factor map} if it is surjective.
+	If there exists a factor map $\pi': X \to Y$ then $Y$ is called a \emph{factor} of $X$.
+	If $\pi'$ is even an isomorphism then $(X, T)$ and $(Y, T)$ are called \emph{conjugated}.
 \end{definition}
 
 \begin{proposition}[Quotient system]
