--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -47,14 +47,27 @@
 \end{definition}
 
 \begin{proposition}[Quotient system]
-	Let $(X, T)$ be a TDS. Let $R \subset X \times X$ be a $T$-invariant (i.e. $\forall t \in T, \forall (x, x^\prime ) \in R : (tx, tx^\prime) \in R$) and closed equivalence relation (ICER). Then the \emph{quotient} $(X/R, T)$ with $T$-action defined by $t[x] := [tx]$ is a TDS.
+	Let $(X, T)$ be a TDS.
+	Let $R \subset X \times X$ be a $T$-invariant (i.e.~$\forall t \in T, \forall (x, x^\prime ) \in R : (tx, tx^\prime) \in R$) and closed equivalence relation (ICER).
+	Then the \emph{quotient} $(X/R, T)$ with $T$-action defined by $t[x] := [tx]$ is also a TDS.
 \end{proposition}
 \begin{proof}
-	Let $\pi_R: X \to X/R$ be the projection, which is continuous. The quotient $X/R$ is a metrizable space, since $X$ is a metric space and $R$ is closed (not trivial). The compactness of $X/R$ follows from $X/R = \pi(X)$ and the compactness of $X$ together with the continuity of $\pi$. The $T$-invariance of $R$ implies the well-definedness of the $T$-action. To show that the $T$ action is continuous: Define the equivalence relation
+	Let $\pi_R: X \to X/R$ be the projection, which is continuous (by construction).
+	The quotient $X/R$ is a metrizable space, since $X$ is a metric space and $R$ is closed (not trivial).
+	The compactness of $X/R$ follows from $X/R = \pi(X)$ and the compactness of $X$ together with the continuity of $\pi$.
+	The $T$-invariance of $R$ implies the well-definedness of the $T$-action.
+	To show that the $T$ action is continuous: Define the equivalence relation
 	\begin{equation*}
 		R^\prime := \{ ((t_1,x_1), (t_2,x_2)) \in (T \times X) \times (T \times X): (x_1, x_2) \in R, t_1 = t_2\}.
 	\end{equation*}
-	Then the $T$-action induces a continuous map $\cdot : (T \times X)/R^\prime \to (T\times X)/R^\prime$ by the universal property of the quotient topology. The continuous map $(t, x) \mapsto (t, [x])$ induces the continuous and bijective map $(T\times X)/R^\prime \ni [(t, x)] \mapsto (t, [x])$. This map is closed\footnote{this is because $x \mapsto [x]$ is closed and proper + thm 5.17.5 of \url{https://stacks.math.columbia.edu/tag/005M}}, which implies that it is a homeomorphism.
+	Then the $T$-action induces a continuous map $\cdot^\prime : (T \times X)/R^\prime \to (T\times X)/R^\prime$ by the universal property of the quotient topology.
+	The continuous map $(t, x) \mapsto (t, [x])$ induces the continuous and bijective map
+	\[ (T\times X)/R^\prime \longrightarrow T \times X / R; \; [(t, x)] \longmapsto (t, [x]) \,. \]
+	This map is closed\footnote
+	{this is because $x \mapsto [x]$ is closed and proper + thm 5.17.5 of \url{https://stacks.math.columbia.edu/tag/005M}},
+	which implies that it is a homeomorphism.
+	Hence $(T \times X) / R^\prime \cong T \times X / R$.
+	Hence we also get a continuous map $\cdot : T \times X/R \to T\times X/R$, which exactly corresponds to the induced action.
 \end{proof}
 
 \begin{proposition}[Connection between Factors and ICERs]
