fixed some typos

--- a/references.bib
+++ b/references.bib
@@ -24,3 +24,11 @@ doi={10.1007/s10485-023-09743-y},
 url={https://doi.org/10.1007/s10485-023-09743-y}
 }
 
+@ARTICLE{Garcia-Ramos2024,
+  title         = "Coincidence rank and multivariate equicontinuity",
+  author        = "Garc{\'\i}a-Ramos, Felipe and Le{\'o}n-Torres, Irma",
+  year          =  2024,
+  archivePrefix = "arXiv",
+  primaryClass  = "math.DS",
+  eprint        = "2411.03529"
+}
