--- a/sections/mef.tex
+++ b/sections/mef.tex
@@ -101,9 +101,9 @@ Let $A:=\bigcap_{j \in J} A_j$.
   The proposition is summarized by the following diagram:
   \begin{center}
     \begin{tikzcd}[sep=large]
-      (X,T) \arrow[d, "\pi"'] \arrow[r, "\varphi \ \text{equic.}"] % \arrow[dr, phantom, "a"] 
+      (X,T) \arrow[d, "\pi"'] \arrow[r, "\varphi \ \text{equic.}"]  \arrow[dr, phantom, "\circlearrowleft", near start] 
       & (Y,T) \\
-      (X_m,T)  \arrow[ur,"\exists ! \tilde{\varphi}"'] &
+      (X_m,T)  \arrow[ur,"\exists ! \tilde{\varphi}"'] & \phantom{a} \\
     \end{tikzcd}
   \end{center}
   \end{proposition}
