fix mistake in 5.8

--- a/sections/m-equicontinuity.tex
+++ b/sections/m-equicontinuity.tex
@@ -45,7 +45,7 @@ Let $m \in \mathbb{N}$ and $X$ any set.
 \end{theorem}
 \begin{proof}
 	Let $(x_1, \dots, x_m) \in Q_m(X) \setminus \Delta^m(X)$.
-	We will show that $(X, T)$ is not equicontinuous.
+	We will show that $(X, T)$ is not $m$-equicontinuous.
 	Let $A_1, \dots, A_m$ be disjoined closed neighborhoods of $x_1, \dots, x_m$ respectively.
 	Define $\varepsilon = \min_{i, j} d(A_i, A_j)$.
 	Let $\delta > 0$.
